# bauhausgtsamtest

./: CMakeLists.txt  README.md  main.cpp
src/: inputs.cpp  main.cpp  util.h
